# forward-mail

./: .gitignore  .gitmodules  Makefile  README.md
files/: forward-mail.conf  forward-mail.sh
src/: CMakeLists.txt  ForwardMailProducer.cpp  ForwardMailProducer.h  ForwardMailTask.cpp  ForwardMailTask.h  main.cpp
src/base/: CMakeLists.txt  Mail.cpp  Mail.h  MailServer.cpp  MailServer.h  Producer.cpp  Producer.h  QueueManager.cpp  QueueManager.h  Queue_s.cpp  Queue_s.h  Task.cpp  Task.h  producer.cpp  producer.h  queue_s.cpp  queue_s.h  task.cpp  task.h  utility.hpp
src/tools/: CMakeLists.txt  UciItem.cpp  UciItem.h  UciPackage.cpp  UciPackage.h  UciSection.cpp  UciSection.h
